--- a/Na_srebrnym_globie.html
+++ b/Na_srebrnym_globie.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="Translation of Na srebrnym globie to English with translation given in tooltips.">
     <meta name="keywords" content="Polish, English, Fiction, Literature, Translation, Bilingual">
-    <meta name="author" content="Opal Raccoon">
+    <meta name="author" content="dew0011">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -15,9 +15,11 @@
 
     <span style="margin: 3%">
         The open source
-        <a href="https://pl.wikisource.org/wiki/Na_srebrnym_globie/Rękopisu_część_pierwsza">original text</a> 
-        and 
-        <a href="https://ia800604.us.archive.org/25/items/na_srebrnym_globie_1705_librivox/nasrebrnymglobie_01_Zulawski_64kb.mp3">audio recording</a>.
+        <a href="https://pl.wikisource.org/wiki/Na_srebrnym_globie/Rękopisu_część_pierwsza">original text</a>
+        and
+        <a
+            href="https://ia800604.us.archive.org/25/items/na_srebrnym_globie_1705_librivox/nasrebrnymglobie_01_Zulawski_64kb.mp3">audio
+            recording</a>.
     </span>
 
     <div class="translate">
@@ -62,8 +64,51 @@
                 roku, bez lat, bez miesięcy...</span>
         </p>
         <p>
-            <span title=""></span>
+            <span title="If we survive...">Jeśli dożyjemy...</span>
         </p>
+        <p>
+            <span
+                title="We are sitting idly, closed in our missile and waiting for the sun. Oh! This terrible longing for the sun!">Siedzimy
+                bezczynnie, zamknięci w naszym pocisku i czekamy słońca. O! ta straszna tęsknota za słońcem!</span>
+        </p>
+        <p>
+            <span
+                title="The night admittedly is bright, brighter beyond comparison to ours - there - earthly nights during full moons.">Noc
+                wprawdzie jest jasna, jaśniejsza bez porównania od naszych — tam — ziemskich nocy podczas pełni. </span>
+            <span
+                title="The giant semicircle of the Earth is stuck over us motionless in the black night at its zenith flooding with white light this terrible emptiness around us... ">Olbrzymi
+                półkrąg Ziemi tkwi nad nami nieruchomie w czarnem niebie u zenitu i zalewa białem światłem tę pustkę
+                straszliwą wokół nas... </span>
+            <span
+                title="In this light everything is so mysterious and dead... and the frost... Oh! What a terrible frost! - Sun! sun!">W
+                tem świetle jest wszystko takie tajemnicze i martwe... I mróz... Oh! jaki straszny mróz! — Słońca!
+                słońca! </span>
+        </p>
+        <p>
+            <span title="O'Tamor from the moment of the crash has still not recovered consciousness.  ">O’Tamor od
+                chwili upadku nie odzyskał jeszcze przytomności. </span>
+            <span title="Woodbell, though himself injured , does not leave him, even for a moment. ">Woodbell, choć sam
+                pokaleczony, nie odstępuje go ani na chwilę. </span>
+            <span title="He is afraid that this is a concussion and it brings very little hope.">Obawia się, że to jest
+                wstrząśnienie mózgu i bardzo mało robi nadziei. </span>
+            <span title="On Earth - he says - they would heal him. ">Na ziemi — powiada — wyleczyłby go. </span>
+            <span
+                title="But here in this hideous frost, here, where for food we almost only have a supply of artificial protein and sugar, where we have to save air and water... =">Ale
+                tutaj w tym ohydnym mrozie, tu, gdzie za jedyne niemal pożywienie mamy zapas sztucznego białka i cukru,
+                gdzie musimy oszczędzać powietrza i wody... </span>
+            <span title="It would be terrible! To lose O'Tamora, he alone, who is the soul of our trip.">Toby było
+                straszne! stracić O’Tamora, właśnie jego, który jest duszą naszej wyprawy!.. </span>
+        </p>
+        <p>
+            <span title="Me, Varadol and Marat - even Selena with both puppies - we are healthy.">Ja, Varadol i Marta — a nawet Selena z obojgiem szczeniąt — jesteśmy zdrowi. </span> 
+            <span title="Marta seems to know nothing and feel nothing. She only has eyes for Woodbell, concerned about his wounds. Lucky Tomasz! How that woman loves him!">Marta zdaje się nic nie wiedzieć i nie czuć. Widzi tylko oczyma za Woodbellem, zaniepokojona jego ranami. Szczęśliwy Tomasz! Jak go ta kobieta kocha! </span>
+            <span title=""> </span>
+        </p>
+        <p>
+            <span title="Oh! this frost! It seems that our closed rocket is turning together with us into a block of ice. ">Oh! ten mróz! Zdaje się, że nasz pocisk zamknięty zamienia się wraz z nami w bryłę lodu. </span>
+            <span title="The pen slips out of my ragged fingers. O whence will the sun finally rise!">Pióro wysuwa mi się ze zgrabiałych palców. O kiedyź nareszcie wzejdzie słońce! </span>
+        </p>
+        <h4 title="That same night 27 hours later">Tejże nocy w 27 godzin później</h4>
     </div>
 
     <style>
