Add start of Tejże nocy w 27 godzin później

--- a/Na_srebrnym_globie.html
+++ b/Na_srebrnym_globie.html
@@ -96,7 +96,7 @@
                 title="But here in this hideous frost, here, where for food we almost only have a supply of artificial protein and sugar, where we have to save air and water... =">Ale
                 tutaj w tym ohydnym mrozie, tu, gdzie za jedyne niemal pożywienie mamy zapas sztucznego białka i cukru,
                 gdzie musimy oszczędzać powietrza i wody... </span>
-            <span title="It would be terrible! To lose O'Tamora, he alone, who is the soul of our trip.">Toby było
+            <span title="It would be terrible! To lose O'Tamor, he alone, who is the soul of our trip.">Toby było
                 straszne! stracić O’Tamora, właśnie jego, który jest duszą naszej wyprawy!.. </span>
         </p>
         <p>
@@ -109,6 +109,13 @@
             <span title="The pen slips out of my ragged fingers. O whence will the sun finally rise!">Pióro wysuwa mi się ze zgrabiałych palców. O kiedyź nareszcie wzejdzie słońce! </span>
         </p>
         <h4 title="That same night 27 hours later">Tejże nocy w 27 godzin później</h4>
+        <p>
+            <span title="With O’Tamor even worse; you cannot delude yourself {it can't be denied} - this is already agony.">Z O’Tamorem coraz gorzej; nie można się łudzić — to jest już agonja. </span>
+            <span title="Tomasz, keeping watch over him, forgot of his own wounds and only now is so weakened that he must lie down.">Tomasz, czuwając nad nim, zapomniał o własnych ranach i sam teraz tak osłabł, że się musiał położyć. </span>
+            <span title="Marta replaces him by the invalid.">Marta zastępuje go przy chorym. </span>
+            <span title="Where this woman gets so much strength? Since she shook herself off from the initial daze of the crash, she is the most active off us all.">Skąd ta kobieta bierze tyle sił? Odkąd się otrząsnęła z pierwszego oszołomienia po spadku, jest najczynniejsza z nas wszystkich. </span>
+            <span title="It seems to me that she still has not slept.">Zdaje mi się, że jeszcze nie spała.</span>
+        </p>
     </div>
 
     <style>
