--- a/Na_srebrnym_globie.html
+++ b/Na_srebrnym_globie.html
@@ -46,7 +46,7 @@
                 istocie to jest okropne! pomyśleć tylko, że tu, gdzie jesteśmy, niema lat, niema miesięcy, ani dni,
                 naszych krótkich, rozkosznych, ziemskich dni... </span>
             <span
-                title="My watch says to me that there already more than forty hours has elapsed from the moment when we fell here; we fell in the night but the sun still has not risen.">Zegarek
+                title="My watch says to me that already more than forty hours has elapsed from the moment when we fell here; we fell in the night but the sun still has not risen.">Zegarek
                 mi mówi, że upłynęło już z górą czterdzieści godzin od chwili, kiedyśmy tu spadli; spadliśmy w nocy, a
                 słońce jeszcze nie wzeszło. </span>
             <span title="We are expecting to see it only in twenty-something hours.">Spodziewamy się je ujrzeć dopiero
@@ -74,7 +74,7 @@
         <p>
             <span
                 title="The night admittedly is bright, brighter beyond comparison to ours - there - earthly nights during full moons.">Noc
-                wprawdzie jest jasna, jaśniejsza bez porównania od naszych — tam — ziemskich nocy podczas pełni. </span>
+                wprawdzie jest jasna, jaśniejsza bez porównania od naszych — tam — on ziemskich nocy podczas pełni. </span>
             <span
                 title="The giant semicircle of the Earth is stuck over us motionless in the black night at its zenith flooding with white light this terrible emptiness around us... ">Olbrzymi
                 półkrąg Ziemi tkwi nad nami nieruchomie w czarnem niebie u zenitu i zalewa białem światłem tę pustkę
@@ -101,11 +101,11 @@
         </p>
         <p>
             <span title="Me, Varadol and Marat - even Selena with both puppies - we are healthy.">Ja, Varadol i Marta — a nawet Selena z obojgiem szczeniąt — jesteśmy zdrowi. </span> 
-            <span title="Marta seems to know nothing and feel nothing. She only has eyes for Woodbell, concerned about his wounds. Lucky Tomasz! How that woman loves him!">Marta zdaje się nic nie wiedzieć i nie czuć. Widzi tylko oczyma za Woodbellem, zaniepokojona jego ranami. Szczęśliwy Tomasz! Jak go ta kobieta kocha! </span>
-            <span title=""> </span>
+            <span title="Marta seems to know nothing and feel nothing.">Marta zdaje się nic nie wiedzieć i nie czuć. </span>
+            <span title="She only has eyes for Woodbell, concerned about his wounds. Lucky Tomasz! How that woman loves him!">Widzi tylko oczyma za Woodbellem, zaniepokojona jego ranami. Szczęśliwy Tomasz! Jak go ta kobieta kocha! </span>
         </p>
         <p>
-            <span title="Oh! this frost! It seems that our closed rocket is turning together with us into a block of ice. ">Oh! ten mróz! Zdaje się, że nasz pocisk zamknięty zamienia się wraz z nami w bryłę lodu. </span>
+            <span title="Oh! This frost! It seems that our closed rocket is turning together with us into a block of ice. ">Oh! ten mróz! Zdaje się, że nasz pocisk zamknięty zamienia się wraz z nami w bryłę lodu. </span>
             <span title="The pen slips out of my ragged fingers. O whence will the sun finally rise!">Pióro wysuwa mi się ze zgrabiałych palców. O kiedyź nareszcie wzejdzie słońce! </span>
         </p>
         <h4 title="That same night 27 hours later">Tejże nocy w 27 godzin później</h4>
@@ -115,6 +115,24 @@
             <span title="Marta replaces him by the invalid.">Marta zastępuje go przy chorym. </span>
             <span title="Where this woman gets so much strength? Since she shook herself off from the initial daze of the crash, she is the most active off us all.">Skąd ta kobieta bierze tyle sił? Odkąd się otrząsnęła z pierwszego oszołomienia po spadku, jest najczynniejsza z nas wszystkich. </span>
             <span title="It seems to me that she still has not slept.">Zdaje mi się, że jeszcze nie spała.</span>
+        </p>
+        <p>
+            <span title="Ah! This frost..."> Ah! ten mróz...</span>
+        </p>
+        <p>
+            <span title="Varadol sits depressed and silent.">Varadol siedzi osowiały i milczący. </span>
+            <span title="On his knees curled up in a ball is Selena. - He says that this warms them both.">Na kolanach jego zwinięta w kłębek Selena. — On mówi, że im tak cieplej obojgu. </span>
+            <span title="We place the puppies in the bed next to Tomasz.">Szczenięta położyliśmy w łóżku obok Tomasza. </span>
+        </p>
+        <p>
+            <span title="I tried to sleep but I couldn't.">Próbowałem spać, ale nie mogę. </span>
+            <span title="The frost does not let me sleep nor this ghastly light from the Earth over us.">Mróz mi spać nie daje i to upiorne światło Ziemi nad nami. </span>
+            <span title="There is only little more than half of her face to see.">Już tylko mało co więcej nad pół tarczy jej widać. </span>
+            <span title="This is a sign that the sun will rise soon.">Znak to, że słońce wzejdzie niebawem. </span>
+            <span title="We cannot exactly calculare when this will happen, as we don't know in which part of moon's surface we are located.">Nie umiemy dokładnie obliczyć, kiedy to nastąpi, gdyż nie wiemy, w którym punkcie tarczy Księżyca się znajdujemy. </span>
+            <span title="O'Tamor would be able to calculate this with ease from the state of the stars but he lies unconcious.">O’Tamor byłby to z łatwością obliczył ze stanu gwiazd, ale on leży bezprzytomny. </span>
+            <span title="It will have to be Varadol, in his place, to do this work.">Będzie się musiał Varadol w jego zastępstwie wziąć do tej roboty. </span>
+            <span title="I don't know why he is delaying this.">Nie wiem, dlaczego z tem zwleka. </span>
         </p>
     </div>
 
