--- a/Na_srebrnym_globie.html
+++ b/Na_srebrnym_globie.html
@@ -132,7 +132,12 @@
             <span title="We cannot exactly calculare when this will happen, as we don't know in which part of moon's surface we are located.">Nie umiemy dokładnie obliczyć, kiedy to nastąpi, gdyż nie wiemy, w którym punkcie tarczy Księżyca się znajdujemy. </span>
             <span title="O'Tamor would be able to calculate this with ease from the state of the stars but he lies unconcious.">O’Tamor byłby to z łatwością obliczył ze stanu gwiazd, ale on leży bezprzytomny. </span>
             <span title="It will have to be Varadol, in his place, to do this work.">Będzie się musiał Varadol w jego zastępstwie wziąć do tej roboty. </span>
-            <span title="I don't know why he is delaying this.">Nie wiem, dlaczego z tem zwleka. </span>
+            <span title="I don't know why in this he hesitates.">Nie wiem, dlaczego z tem zwleka. </span>
+        </p>
+        <p>
+            <span title="We should have, according to calculation, fallen in the Sinus Medii but God only knows where we really are.">Powinniśmy byli według obliczenia spaść na Sinus Medii, ale Bóg jeden wie, gdzie się istotnie znajdujemy. </span>
+            <span title="In the Sinus Medii there should already be sun shining at this hour.">Na Sinus Medii powinno by już słońce świecić o tej godzinie. </span>
+            <span title="Evidently we fell further towards 'the East' - as this side of the moon is called on Earth, where for us the sun will set - not too far, however, from the centre of the moon's face because the Earth is almost at the zenith over us.">Widocznie spadliśmy dalej ku »wschodowi« — jak na Ziemi tę stronę Księżyca nazywają, gdzie dla nas będzie słońce zachodziło — niezbyt jednak daleko od środka księżycowej tarczy, gdyż Ziemia jest nad nami niemal w zenicie.</span>
         </p>
     </div>
 
