--- a/Na_srebrnym_globie.html
+++ b/Na_srebrnym_globie.html
@@ -74,7 +74,8 @@
         <p>
             <span
                 title="The night admittedly is bright, brighter beyond comparison to ours - there - earthly nights during full moons.">Noc
-                wprawdzie jest jasna, jaśniejsza bez porównania od naszych — tam — on ziemskich nocy podczas pełni. </span>
+                wprawdzie jest jasna, jaśniejsza bez porównania od naszych — tam — on ziemskich nocy podczas pełni.
+            </span>
             <span
                 title="The giant semicircle of the Earth is stuck over us motionless in the black night at its zenith flooding with white light this terrible emptiness around us... ">Olbrzymi
                 półkrąg Ziemi tkwi nad nami nieruchomie w czarnem niebie u zenitu i zalewa białem światłem tę pustkę
@@ -100,20 +101,35 @@
                 straszne! stracić O’Tamora, właśnie jego, który jest duszą naszej wyprawy!.. </span>
         </p>
         <p>
-            <span title="Me, Varadol and Marat - even Selena with both puppies - we are healthy.">Ja, Varadol i Marta — a nawet Selena z obojgiem szczeniąt — jesteśmy zdrowi. </span> 
-            <span title="Marta seems to know nothing and feel nothing.">Marta zdaje się nic nie wiedzieć i nie czuć. </span>
-            <span title="She only has eyes for Woodbell, concerned about his wounds. Lucky Tomasz! How that woman loves him!">Widzi tylko oczyma za Woodbellem, zaniepokojona jego ranami. Szczęśliwy Tomasz! Jak go ta kobieta kocha! </span>
+            <span title="Me, Varadol and Marat - even Selena with both puppies - we are healthy.">Ja, Varadol i Marta —
+                a nawet Selena z obojgiem szczeniąt — jesteśmy zdrowi. </span>
+            <span title="Marta seems to know nothing and feel nothing.">Marta zdaje się nic nie wiedzieć i nie czuć.
+            </span>
+            <span
+                title="She only has eyes for Woodbell, concerned about his wounds. Lucky Tomasz! How that woman loves him!">Widzi
+                tylko oczyma za Woodbellem, zaniepokojona jego ranami. Szczęśliwy Tomasz! Jak go ta kobieta kocha!
+            </span>
         </p>
         <p>
-            <span title="Oh! This frost! It seems that our closed rocket is turning together with us into a block of ice. ">Oh! ten mróz! Zdaje się, że nasz pocisk zamknięty zamienia się wraz z nami w bryłę lodu. </span>
-            <span title="The pen slips out of my ragged fingers. O whence will the sun finally rise!">Pióro wysuwa mi się ze zgrabiałych palców. O kiedyź nareszcie wzejdzie słońce! </span>
+            <span
+                title="Oh! This frost! It seems that our closed rocket is turning together with us into a block of ice. ">Oh!
+                ten mróz! Zdaje się, że nasz pocisk zamknięty zamienia się wraz z nami w bryłę lodu. </span>
+            <span title="The pen slips out of my ragged fingers. O whence will the sun finally rise!">Pióro wysuwa mi
+                się ze zgrabiałych palców. O kiedyź nareszcie wzejdzie słońce! </span>
         </p>
         <h4 title="That same night 27 hours later">Tejże nocy w 27 godzin później</h4>
         <p>
-            <span title="With O’Tamor even worse; you cannot delude yourself {it can't be denied} - this is already agony.">Z O’Tamorem coraz gorzej; nie można się łudzić — to jest już agonja. </span>
-            <span title="Tomasz, keeping watch over him, forgot of his own wounds and only now is so weakened that he must lie down.">Tomasz, czuwając nad nim, zapomniał o własnych ranach i sam teraz tak osłabł, że się musiał położyć. </span>
+            <span
+                title="With O’Tamor even worse; you cannot delude yourself {it can't be denied} - this is already agony.">Z
+                O’Tamorem coraz gorzej; nie można się łudzić — to jest już agonja. </span>
+            <span
+                title="Tomasz, keeping watch over him, forgot of his own wounds and only now is so weakened that he must lie down.">Tomasz,
+                czuwając nad nim, zapomniał o własnych ranach i sam teraz tak osłabł, że się musiał położyć. </span>
             <span title="Marta replaces him by the invalid.">Marta zastępuje go przy chorym. </span>
-            <span title="Where this woman gets so much strength? Since she shook herself off from the initial daze of the crash, she is the most active off us all.">Skąd ta kobieta bierze tyle sił? Odkąd się otrząsnęła z pierwszego oszołomienia po spadku, jest najczynniejsza z nas wszystkich. </span>
+            <span
+                title="Where this woman gets so much strength? Since she shook herself off from the initial daze of the crash, she is the most active off us all.">Skąd
+                ta kobieta bierze tyle sił? Odkąd się otrząsnęła z pierwszego oszołomienia po spadku, jest
+                najczynniejsza z nas wszystkich. </span>
             <span title="It seems to me that she still has not slept.">Zdaje mi się, że jeszcze nie spała.</span>
         </p>
         <p>
@@ -121,23 +137,79 @@
         </p>
         <p>
             <span title="Varadol sits depressed and silent.">Varadol siedzi osowiały i milczący. </span>
-            <span title="On his knees curled up in a ball is Selena. - He says that this warms them both.">Na kolanach jego zwinięta w kłębek Selena. — On mówi, że im tak cieplej obojgu. </span>
-            <span title="We place the puppies in the bed next to Tomasz.">Szczenięta położyliśmy w łóżku obok Tomasza. </span>
+            <span title="On his knees curled up in a ball is Selena. - He says that this warms them both.">Na kolanach
+                jego zwinięta w kłębek Selena. — On mówi, że im tak cieplej obojgu. </span>
+            <span title="We place the puppies in the bed next to Tomasz.">Szczenięta położyliśmy w łóżku obok Tomasza.
+            </span>
         </p>
         <p>
             <span title="I tried to sleep but I couldn't.">Próbowałem spać, ale nie mogę. </span>
-            <span title="The frost does not let me sleep nor this ghastly light from the Earth over us.">Mróz mi spać nie daje i to upiorne światło Ziemi nad nami. </span>
-            <span title="There is only little more than half of her face to see.">Już tylko mało co więcej nad pół tarczy jej widać. </span>
+            <span title="The frost does not let me sleep nor this ghastly light from the Earth over us.">Mróz mi spać
+                nie daje i to upiorne światło Ziemi nad nami. </span>
+            <span title="There is only little more than half of her face to see.">Już tylko mało co więcej nad pół
+                tarczy jej widać. </span>
             <span title="This is a sign that the sun will rise soon.">Znak to, że słońce wzejdzie niebawem. </span>
-            <span title="We cannot exactly calculare when this will happen, as we don't know in which part of moon's surface we are located.">Nie umiemy dokładnie obliczyć, kiedy to nastąpi, gdyż nie wiemy, w którym punkcie tarczy Księżyca się znajdujemy. </span>
-            <span title="O'Tamor would be able to calculate this with ease from the state of the stars but he lies unconcious.">O’Tamor byłby to z łatwością obliczył ze stanu gwiazd, ale on leży bezprzytomny. </span>
-            <span title="It will have to be Varadol, in his place, to do this work.">Będzie się musiał Varadol w jego zastępstwie wziąć do tej roboty. </span>
+            <span
+                title="We cannot exactly calculare when this will happen, as we don't know in which part of moon's surface we are located.">Nie
+                umiemy dokładnie obliczyć, kiedy to nastąpi, gdyż nie wiemy, w którym punkcie tarczy Księżyca się
+                znajdujemy. </span>
+            <span
+                title="O'Tamor would be able to calculate this with ease from the state of the stars but he lies unconcious.">O’Tamor
+                byłby to z łatwością obliczył ze stanu gwiazd, ale on leży bezprzytomny. </span>
+            <span title="It will have to be Varadol, in his place, to do this work.">Będzie się musiał Varadol w jego
+                zastępstwie wziąć do tej roboty. </span>
             <span title="I don't know why in this he hesitates.">Nie wiem, dlaczego z tem zwleka. </span>
         </p>
         <p>
-            <span title="We should have, according to calculation, fallen in the Sinus Medii but God only knows where we really are.">Powinniśmy byli według obliczenia spaść na Sinus Medii, ale Bóg jeden wie, gdzie się istotnie znajdujemy. </span>
-            <span title="In the Sinus Medii there should already be sun shining at this hour.">Na Sinus Medii powinno by już słońce świecić o tej godzinie. </span>
-            <span title="Evidently we fell further towards 'the East' - as this side of the moon is called on Earth, where for us the sun will set - not too far, however, from the centre of the moon's face because the Earth is almost at the zenith over us.">Widocznie spadliśmy dalej ku »wschodowi« — jak na Ziemi tę stronę Księżyca nazywają, gdzie dla nas będzie słońce zachodziło — niezbyt jednak daleko od środka księżycowej tarczy, gdyż Ziemia jest nad nami niemal w zenicie.</span>
+            <span
+                title="We should have, according to calculation, fallen in the Sinus Medii but God only knows where we really are.">Powinniśmy
+                byli według obliczenia spaść na Sinus Medii, ale Bóg jeden wie, gdzie się istotnie znajdujemy. </span>
+            <span title="In the Sinus Medii there should already be sun shining at this hour.">Na Sinus Medii powinno by
+                już słońce świecić o tej godzinie. </span>
+            <span
+                title="Evidently we fell further towards 'the East' - as this side of the moon is called on Earth, where for us the sun will set - not too far, however, from the centre of the moon's face because the Earth is almost at the zenith over us.">Widocznie
+                spadliśmy dalej ku »wschodowi« — jak na Ziemi tę stronę Księżyca nazywają, gdzie dla nas będzie słońce
+                zachodziło — niezbyt jednak daleko od środka księżycowej tarczy, gdyż Ziemia jest nad nami niemal w
+                zenicie.</span>
+        </p>
+        <p>
+            <span
+                title="So many new, strange impressions I receive from everywhere that I cannot collect them nor digest them.">Tyle
+                nowych, dziwnych wrażeń odbieram zewsząd, że ich nie mogę zebrać ani uporządkować. </span>
+            <span
+                title="First of all this unheard of, outright fear of the overwhelming feeling of lightness...">Przedewszystkiem
+                to niesłychane, wprost strachem przejmujące uczucie lekkości... </span>
+            <span
+                title="We knew on Earth, that the Moon, forty-nine times smaller than it and eighty-one times lighter, will pull us in six times weaker, although we are located closer to its centre of gravity.">Wiedzieliśmy
+                na Ziemi, że Księżyc, czterdzieści dziewięć razy od niej mniejszy, a ośmdziesiąt jeden razy lżejszy,
+                będzie nas przyciągał sześć razy słabiej, choć się bliżej jego środka ciężkości znajdujemy; </span>
+            <span title="but it is one thing to know of something and another to experience it.">ale co innego jest
+                wiedzieć o czemś, a co innego czuć. </span>
+            <span
+                title="We already have been close to seventy hours on the Moon and we still can't get used to it.">Jesteśmy
+                już blizko siedmdziesiąt godzin na Księżycu i nie możemy się jeszcze przyzwyczaić do tego. </span>
+            <span
+                title="We cannot make use of our muscles due to the reduced weight of objects, ba! even our own bodies.">Nie
+                umiemy zastosować wysiłku naszych mięśni do zmniejszonej wagi przedmiotów, ba! nawet własnego ciała.
+            </span>
+            <span
+                title="I get up quickly from sitting and jump nearly a metre in the air, even though I wanted only to stand up.">Powstaję
+                szybko ze siedzenia i podskakuję blizko na metr w górę, mimo że się chciałem tylko podnieść. </span>
+            <span
+                title="Varadol wanted a few hours ago to bend the hook of a thick wire, attached to the wall of our house.">Varadol
+                chciał przed kilku godzinami zgiąć hak z grubego drutu, przymocowany do ściany naszego domu. </span>
+            <span
+                title="He grabbed it with his hand - and flew all the way up into the air with it in hand. He forgot that now he only weighs, instead of seventy something, less than thirty kilograms.">Chwycił
+                go dłonią — i podniósł się cały w górę na dłoni! Zapomniał, że waży teraz zamiast siedmdziesięciu kilku,
+                tylko niespełna trzynaście kilogramów! </span>
+            <span title="Every moment one of us violently throws an object, only wanting to move it.">Co chwilę któryś z
+                nas rzuca gwałtownie przedmiotami, chcąc je tylko przesunąć. </span>
+            <span
+                title="Hitting a nail becomes an almost impossible feat considering that a hammer weighing on earth two pounds, here weighs barely one hundred seventy and a bit grams. ">Wbicie
+                gwoździa staje się rzeczą prawie niemożliwą wobec tego, że młotek ważący na ziemi dwa funty, waży tutaj
+                zaledwie sto siedmdziesiąt parę gramów! </span>
+            <span title="The pen, with which I write, I can hardly feel in my hand.">Pióra, którym piszę, nie czuję
+                prawie w ręku. </span>
         </p>
     </div>
 
