--- a/Na_srebrnym_globie.html
+++ b/Na_srebrnym_globie.html
@@ -211,6 +211,28 @@
             <span title="The pen, with which I write, I can hardly feel in my hand.">Pióra, którym piszę, nie czuję
                 prawie w ręku. </span>
         </p>
+        <p>
+            <span
+                title="Marta said a moment ago that she has the impression, as if she has already become a ghost, devoid of a weighty body.">Marta
+                powiedziała przed chwilą, że ma wrażenie, jakby się już stała duchem, pozbawionym ważkiego ciała.
+            </span>
+            <span
+                title="This is a very good term. Indeed there is something uncomfortable about this feeling of strange lightness...">To
+                jest bardzo dobre określenie. W istocie jest coś nieswojskiego w tem uczuciu dziwnej lekkości... </span>
+            <span
+                title="One could really believe that one is a ghost, especially with the view of the Earth shining in the sky like the Moon">Możnaby
+                naprawdę uwierzyć, że się jest duchem, zwłaszcza wobec widoku Ziemi świecącej na niebie jak Księżyc
+            </span>
+            <span title="- only fourteen times larger and brighter than that, which the earthly nights brightens.">— tylko
+                czternaście razy większy i jaśniejszy od tego, który ziemskie noce rozjaśnia. </span>
+            <span
+                title="I know that it is all true but still I think that I am dreaming or located in a opera house in some weird fantasy production">Wiem,
+                że to wszystko prawda, a wciąż mi się zdaje, że śnię, lub znajduję się w gmachu opery na jakiejś dziwnej
+                feerji. </span>
+            <span
+                title="Any minute - I think - a curtain will fall and these decorations will wind up, like a dream...">Lada
+                chwila — myślę — spadnie kurtyna i te dekoracje się zwiną, jak sen... </span>
+        </p>
     </div>
 
     <style>
