--- a/Na_srebrnym_globie.html
+++ b/Na_srebrnym_globie.html
@@ -233,6 +233,12 @@
                 title="Any minute - I think - a curtain will fall and these decorations will wind up, like a dream...">Lada
                 chwila — myślę — spadnie kurtyna i te dekoracje się zwiną, jak sen... </span>
         </p>
+        <p>
+            <span title="About this we knew well before we took off, that the Earth would shine so upon us, like a giant unmoving lamp suspended in the sky.">I o tem przecież wiedzieliśmy dobrze przed wyruszeniem w drogę, że tak Ziemia będzie świecić nad nami, jak olbrzymia, nieruchoma lampa zawieszona wśród nieba. </span>
+            <span title="Still I keep telling myself that this thing is so simple:">Ciągle powtarzam sobie, że to rzecz tak prosta: </span>
+            <span title="the Moon continues it path with only one side turned towards the Earth and so it must seem to be stationary, when looking at it from the Moon.">Księżyc odbywa swoją drogę zwrócony ku Ziemi wciąż jedną stroną, a więc ona musi się wydawać nieruchomą patrzącym na nią z Księżyca. </span>
+            <span title="Yes, this is a natural thing, and although it frightens me this glowing glassy spectre of the Earth, looking at us for seventy hours unmoving and persistent at the sky's very zenith!">Tak, to jest rzecz naturalna, a przecież straszy mnie ten świecący szklany upiór Ziemi, wpatrujący się w nas od siedmdziesięciu godzin nieruchomie i uporczywie z samego zenitu! </span>
+        </p>
     </div>
 
     <style>
