--- a/Na_srebrnym_globie.html
+++ b/Na_srebrnym_globie.html
@@ -133,7 +133,7 @@
             <span title="It seems to me that she still has not slept.">Zdaje mi się, że jeszcze nie spała.</span>
         </p>
         <p>
-            <span title="Ah! This frost..."> Ah! ten mróz...</span>
+            <span title="Ah! This frost...">Ah! ten mróz...</span>
         </p>
         <p>
             <span title="Varadol sits depressed and silent.">Varadol siedzi osowiały i milczący. </span>
@@ -223,7 +223,8 @@
                 title="One could really believe that one is a ghost, especially with the view of the Earth shining in the sky like the Moon">Możnaby
                 naprawdę uwierzyć, że się jest duchem, zwłaszcza wobec widoku Ziemi świecącej na niebie jak Księżyc
             </span>
-            <span title="- only fourteen times larger and brighter than that, which the earthly nights brightens.">— tylko
+            <span title="- only fourteen times larger and brighter than that, which the earthly nights brightens.">—
+                tylko
                 czternaście razy większy i jaśniejszy od tego, który ziemskie noce rozjaśnia. </span>
             <span
                 title="I know that it is all true but still I think that I am dreaming or located in a opera house in some weird fantasy production">Wiem,
@@ -234,10 +235,32 @@
                 chwila — myślę — spadnie kurtyna i te dekoracje się zwiną, jak sen... </span>
         </p>
         <p>
-            <span title="About this we knew well before we took off, that the Earth would shine so upon us, like a giant unmoving lamp suspended in the sky.">I o tem przecież wiedzieliśmy dobrze przed wyruszeniem w drogę, że tak Ziemia będzie świecić nad nami, jak olbrzymia, nieruchoma lampa zawieszona wśród nieba. </span>
-            <span title="Still I keep telling myself that this thing is so simple:">Ciągle powtarzam sobie, że to rzecz tak prosta: </span>
-            <span title="the Moon continues it path with only one side turned towards the Earth and so it must seem to be stationary, when looking at it from the Moon.">Księżyc odbywa swoją drogę zwrócony ku Ziemi wciąż jedną stroną, a więc ona musi się wydawać nieruchomą patrzącym na nią z Księżyca. </span>
-            <span title="Yes, this is a natural thing, and although it frightens me this glowing glassy spectre of the Earth, looking at us for seventy hours unmoving and persistent at the sky's very zenith!">Tak, to jest rzecz naturalna, a przecież straszy mnie ten świecący szklany upiór Ziemi, wpatrujący się w nas od siedmdziesięciu godzin nieruchomie i uporczywie z samego zenitu! </span>
+            <span
+                title="About this we knew well before we took off, that the Earth would shine so upon us, like a giant unmoving lamp suspended in the sky.">I
+                o tem przecież wiedzieliśmy dobrze przed wyruszeniem w drogę, że tak Ziemia będzie świecić nad nami, jak
+                olbrzymia, nieruchoma lampa zawieszona wśród nieba. </span>
+            <span title="Still I keep telling myself that this thing is so simple:">Ciągle powtarzam sobie, że to rzecz
+                tak prosta: </span>
+            <span
+                title="the Moon continues it path with only one side turned towards the Earth and so it must seem to be stationary, when looking at it from the Moon.">Księżyc
+                odbywa swoją drogę zwrócony ku Ziemi wciąż jedną stroną, a więc ona musi się wydawać nieruchomą
+                patrzącym na nią z Księżyca. </span>
+            <span
+                title="Yes, this is a natural thing, and although it frightens me this glowing glassy spectre of the Earth, looking at us for seventy hours unmoving and persistent at the sky's very zenith!">Tak,
+                to jest rzecz naturalna, a przecież straszy mnie ten świecący szklany upiór Ziemi, wpatrujący się w nas
+                od siedmdziesięciu godzin nieruchomie i uporczywie z samego zenitu! </span>
+        </p>
+        <p>
+            <span
+                title="I look at it through the glass in the upward facing wall of the rocket and I distinguish with my naked eye the darker stains of the ocean and glowing faces of the land.">Widzę
+                ją przez szybę w zwróconej ku górze ścianie pocisku i rozróżniam gołem okiem ciemniejsze plamy mórz i
+                rozjarzone tarcze lądów. </span>
+            <span title="They move before me slowly, emerging one by one from the shadows:">Przesuwają się przede mną z
+                wolna, wyłaniają się po kolei z cienia: </span>
+            <span
+                title="Asia, Europe, America - they narrow at the edge of the luminous globe and disappear, in order to appear again twenty-four hours later.">Azja,
+                Europa, Ameryka — zwężają się na krawędzi świetlistego globu i zachodzą, aby znów po dwudziestu czterech
+                godzinach się ukazać. </span>
         </p>
     </div>
 
