--- a/Na_srebrnym_globie.html
+++ b/Na_srebrnym_globie.html
@@ -262,6 +262,13 @@
                 Europa, Ameryka — zwężają się na krawędzi świetlistego globu i zachodzą, aby znów po dwudziestu czterech
                 godzinach się ukazać. </span>
         </p>
+        <p>
+            <span
+                title="It seems to me that the entire Earth has turned into an open eye, ruthless and watchful, and it stares stubbornly and with surprise at us, which escaped from it bodily">Tak
+                mi się zdaje, że cała Ziemia zamieniła się w oko rozwarte, bezlitośne i czujne i wpatruje się uporczywie
+                a ze zdziwieniem w nas, którzyśmy od niej uciekli z ciałem </span>
+            <span title="- the first of all her children.">— pierwsi ze wszystkich jej dzieci. </span>
+        </p>
     </div>
 
     <style>
