--- a/Na_srebrnym_globie.html
+++ b/Na_srebrnym_globie.html
@@ -269,6 +269,21 @@
                 a ze zdziwieniem w nas, którzyśmy od niej uciekli z ciałem </span>
             <span title="- the first of all her children.">— pierwsi ze wszystkich jej dzieci. </span>
         </p>
+        <p>
+            <span
+                title="In the first moment after the crash, as we regained our senses and unscrewed the iron covers, covering the round glass of our home, we saw it already above us.">W
+                pierwszej chwili po upadku, gdyśmy nieco oprzytomnieli i odśrubowali żelazne pokrywy, zasłaniające
+                okrągłe szyby naszego domku, zobaczyliśmy ją już nad sobą. </span>
+            <span title="It was almost full. Back then it was similar to an eye, wide open in astonishment;">Była niemal
+                w pełni. Wtedy podobna była do oka szeroko w osłupieniu rozwartego; </span>
+            <span title="now the shadow of the eyelid slowly slides itself over that terrible, motionless pupil.">teraz
+                zwolna zasuwa się na tę straszną, nieruchomą źrenicę powieka cieniu. </span>
+            <span
+                title="In a moment, when the sun, not proceeded by dawn, explodes from behind the rocks like a fiery and radiant ball in the black sky, it will be half asleep, and shut entirely, as the sun stands perpendicular above us.">W
+                chwili, kiedy słońce, nie poprzedzone świtem, wybuchnie z za skał jak płomienna i bezpromienna kula na
+                czarnem niebie, już się to oko zmruży do połowy, a zamknie się całkiem, gdy słońce stanie prostopadle
+                nad nami. </span>
+        </p>
     </div>
 
     <style>
